--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -17,21 +17,29 @@
             font-size: .89em;
         }
     </style>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 {% endblock %}
 {% block title %}Login{% endblock %}
 {% block content %}
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
         <div class="row justify-content-center align-items-center">
             <div class="col-lg-6">
-                <form method="post" class="card pb-3 pt-5 pl-5 pr-5">
+                <form method="post" class="card p-5">
                     <fieldset>
                         <legend class="border-bottom pb-3 text-center" style="font-size: 3rem;">Login Here.</legend>
                         {% csrf_token %}
                         {{ form|crispy }}
                         <input type="hidden" name="next" value="{{ next }}">
                     </fieldset>
+                    <div class="row justify-content-between align-items-center m-2 mb-0">
+                        <p><a href="{% url 'register' %}" class="">Need an Account?</a></p> 
+                        <p><a href="" class="">Forgot Password?</a></p>
+                    </div>
+                    <div class="form-group d-flex justify-content-center align-items-center mt-3">
+                        <div class="g-recaptcha" data-sitekey="6LeSPLAUAAAAAJGdj1Olii9PX1UkPQO9iIm1CIhb"></div>
+                    </div>                    
                     <div class="form-group text-center">
-                        <button type="submit" class="btn btn-lg m-0 mt-3 btn-primary">Login</button>
+                        <button type="submit" class="btn btn-lg m-0 btn-primary">Login</button>
                     </div>
                 </form>
             </div>
