cart context_processors

--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -87,5 +87,6 @@
             <a href="{% url 'products:list' %}" class="btn btn-warning">Continue Shopping <i class="fas fa-shopping-cart"></i></a>
             <a href="" class="btn btn-success">CheckOut</a>
         </div>
+        <div class="clearfix"></div>
     </div>
 {% endblock %}
