--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>{% block title %} Base {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block mystyles %}{% endblock %}
     <script src="https://kit.fontawesome.com/8c5d16754b.js"></script>
     <style>
