--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -85,7 +85,7 @@
 
         <div class="float-right">
             <a href="{% url 'products:list' %}" class="btn btn-warning">Continue Shopping <i class="fas fa-shopping-cart"></i></a>
-            <a href="" class="btn btn-success">CheckOut</a>
+            <a href="{% url 'orders:order_create' %}" class="btn btn-success">CheckOut</a>
         </div>
         <div class="clearfix"></div>
     </div>
